fix a layout issue in the header

--- a/src/_scss/chunks/_site.scss
+++ b/src/_scss/chunks/_site.scss
@@ -159,6 +159,10 @@
         }
 
         #{$p} {
+            &__header {
+                padding-block-end: var(--site-padding);
+            }
+
             &__content {
                 position: relative;
                 flex: 1;
